# private-jet-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  conftest.py  docker-compose-db.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  readme.md  requirements.txt  settings.py  setup.cfg
configurations/: base_controller.py  base_db.py  base_router.py  dependency_injection.py
the_app/: db.py  router.py
the_app/controler/: controler.py  db.py
the_app/tests/: test_db.py
