[tool.poetry]
name = "private-jet-template"
version = "0.1.0"
description = "PrivateJet is a Python application that serves as a comprehensive boilerplate for building fast and efficient APIs"
authors = ["m-moein98 <moein1475963.mmz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
motor = "^3.5.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
pytest = "^8.3.2"
fastapi-utils = "^0.7.0"
typing-inspect = "^0.9.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.5.6"
pre-commit = "^3.8.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92

[tool.ruff.lint]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PL",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # type-checking imports
  "TCH",
  # comprehensions
  "C4",
  # pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
  # flake8-bandit: exec-builtin
  "S102",
  # numpy-legacy-random
  "NPY002",
  # Perflint
  "PERF",
  # flynt
  "FLY",
  # flake8-logging-format
  "G",
]
ignore = ["PLW0603"]
