[metadata]
name = private-jet-template
license = private
classifiers =
    Environment :: Web
    Framework :: FastAPI
    OperatingSystem :: OS Independent
    Programming Language :: Python :: 3.12.2
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[flake8]
max-line-length = 88
ignore = E203, W503, F405, E722, F403, E501, E721, W605
exclude =
    .git
    .gitignore
    .vscode
    .idea
    .env
    .venv
    env
    venv

per-file-ignores =
    */__init__.py: F401
    tests/*: TAE001

[isort]
profile=black
skip = build,.tox,venv
group_by_package=true
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88